feat: paginate dictionary draft items
